# mandelbrot_window

./: Cargo.toml  readme.md
src/: main.rs  mand.rs
