[package]
name = "mandelbrot_window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"
num-complex = "0.4.3"
colorsys = "0.6.7"
image = "0.24.6"
time = "0.3.23"
confy = "0.5.1"
serde = { version = "1.0.177", features = ["derive"] }
